--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "hexo": "^3.2.0",
     "hexo-deployer-ftpsync": "^0.1.1",
     "hexo-excerpt": "^1.1.2",
+    "hexo-filter-github-emojis": "^1.4.1",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.0",
